[gd_scene load_steps=13 format=4 uid="uid://83uawfodwefy"]

[ext_resource type="Script" path="res://src/levels/level_1.gd" id="1_0p52p"]
[ext_resource type="PackedScene" uid="uid://ci6qp1vskqf4r" path="res://src/puzzles/flow/flow_puzzle_1.tscn" id="2_byl51"]
[ext_resource type="TileSet" uid="uid://prouykjdur4o" path="res://resources/tilesets/tileset_01.tres" id="2_kux3c"]

[ext_resource type="TileSet" uid="uid://bth3qospiuewq" path="res://resources/tilesets/tileset_02.tres" id="3_mka6j"]
[ext_resource type="PackedScene" uid="uid://5t5rtqxp61dy" path="res://src/game/player.tscn" id="4_obqjr"]
[ext_resource type="TileSet" uid="uid://bhe320tinxady" path="res://resources/tilesets/tileset_objects.tres" id="5_6rfn8"]
[ext_resource type="PackedScene" uid="uid://cg0hj1r053cvc" path="res://src/game/terminal.tscn" id="5_on78q"]
[ext_resource type="PackedScene" uid="uid://dqh0ukryq2dra" path="res://src/game/door.tscn" id="6_me2q3"]
[ext_resource type="PackedScene" uid="uid://ro4gcfqpqioc" path="res://src/game/help_point.tscn" id="10_2c3s3"]
[ext_resource type="PackedScene" uid="uid://bexktds2khmdd" path="res://src/game/level_trigger.tscn" id="11_fv470"]
[ext_resource type="PackedScene" uid="uid://bev30cs4p44qc" path="res://src/levels/level_2.tscn" id="12_468xu"]


[sub_resource type="RectangleShape2D" id="RectangleShape2D_ullp8"]
size = Vector2(24, 24)

[node name="Level1" type="Node2D"]
script = ExtResource("1_0p52p")

[node name="Tiles" type="Node2D" parent="."]

[node name="Layer1" type="TileMapLayer" parent="Tiles" groups=["Tiles"]]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAP//AAAIAAMAAAAAAP7/AAAIAAEAAAAAAPz/AAAIAAEAAAAAAP3/AAAIAAEAAAAAAPr/AAAIAAEAAAAAAPv/AAAIAAEAAAAAAPn/AAAIAAEAAAAAAPj/AAAIAAEAAAABAPj/AAALAAIAAAABAPn/AAALAAIAAAABAPr/AAALAAIAAAABAPz/AAALAAIAAAABAP3/AAALAAIAAAABAP7/AAAGAAEAAAABAP//AAAJAAMAAAABAPv/AAALAAIAAAACAP//AAAJAAMAAAADAP//AAAJAAMAAAACAP7/AAAKAAAAAAADAP7/AAAKAAAAAAAEAP7/AAAKAAAAAAAFAP7/AAAKAAAAAAAGAP7/AAAKAAAAAAAHAP7/AAAKAAAAAAAIAP7/AAAKAAAAAAAKAP7/AAAKAAAAAAAJAP7/AAAKAAAAAAALAP7/AAAKAAAAAAALAP//AAAJAAMAAAAKAP//AAAJAAMAAAAJAP//AAAJAAMAAAAIAP//AAAJAAMAAAAHAP//AAAJAAMAAAAGAP//AAAJAAMAAAAFAP//AAAJAAMAAAAEAP//AAAJAAMAAAAAAPf/AAAIAAEAAAAAAPb/AAAIAAEAAAAAAPX/AAAIAAEAAAAAAPT/AAAIAAEAAAAAAPP/AAAIAAEAAAABAPP/AAAGAAIAAAABAPT/AAALAAIAAAABAPX/AAALAAIAAAABAPb/AAALAAIAAAABAPf/AAALAAIAAAAMAP//AAAJAAMAAAAMAP7/AAAFAAEAAAAMAP3/AAAIAAEAAAAMAPz/AAAIAAEAAAAMAPv/AAAIAAAAAAANAPv/AAAKAAAAAAAOAPv/AAAKAAAAAAAOAPz/AAAJAAIAAAAOAP3/AAAJAAIAAAAOAP7/AAAJAAIAAAAOAP//AAAJAAMAAAANAP//AAAJAAMAAAANAP7/AAAJAAIAAAANAP3/AAAJAAIAAAANAPz/AAAJAAIAAAAPAPz/AAAJAAIAAAAPAP3/AAAJAAIAAAAPAP7/AAAJAAIAAAAPAP//AAAJAAMAAAAQAP//AAAJAAMAAAAQAP7/AAAJAAIAAAAQAP3/AAAJAAIAAAAQAPz/AAAJAAIAAAAQAPv/AAAKAAAAAAAPAPv/AAAKAAAAAAARAPv/AAAGAAAAAAARAPz/AAALAAIAAAARAP3/AAALAAIAAAARAP7/AAALAAIAAAARAP//AAALAAMAAAAAAPL/AAAEAAEAAAABAPL/AAAKAAAAAAACAPL/AAAKAAAAAAAEAPL/AAAKAAAAAAADAPL/AAAKAAAAAAAGAPL/AAAKAAAAAAAFAPL/AAAKAAAAAAAHAPL/AAAKAAAAAAAIAPL/AAAKAAAAAAAJAPL/AAAKAAAAAAAKAPL/AAAKAAAAAAALAPL/AAAKAAAAAAAMAPL/AAAKAAAAAAANAPL/AAAKAAAAAAAOAPL/AAAKAAAAAAAPAPL/AAAKAAAAAAAQAPL/AAAKAAAAAAAQAPP/AAAFAAIAAAAPAPP/AAAJAAMAAAANAPP/AAAJAAMAAAAOAPP/AAAJAAMAAAAMAPP/AAAJAAMAAAALAPP/AAAJAAMAAAAKAPP/AAAJAAMAAAAJAPP/AAAJAAMAAAAIAPP/AAAJAAMAAAAHAPP/AAAJAAMAAAAGAPP/AAAJAAMAAAAFAPP/AAAJAAMAAAAEAPP/AAAJAAMAAAADAPP/AAAJAAMAAAACAPP/AAAJAAMAAAARAPL/AAAKAAAAAAARAPP/AAAGAAIAAAASAPP/AAAJAAMAAAASAPL/AAAKAAAAAAATAPL/AAAKAAAAAAAUAPL/AAAKAAAAAAAVAPL/AAAKAAAAAAAWAPL/AAALAAAAAAAWAPP/AAALAAMAAAAVAPP/AAAJAAMAAAAUAPP/AAAJAAMAAAATAPP/AAAJAAMAAAARAPT/AAALAAIAAAARAPX/AAALAAIAAAARAPb/AAALAAIAAAARAPf/AAALAAIAAAARAPj/AAALAAMAAAAQAPj/AAAIAAMAAAAQAPf/AAAIAAEAAAAQAPb/AAAIAAEAAAAQAPX/AAAIAAEAAAAQAPT/AAAIAAEAAAAAAPH/AAAAAAEAAAAAAPD/AAAAAAEAAAAAAO//AAAAAAEAAAAAAO7/AAAAAAEAAAAAAO3/AAAAAAEAAAAAAOz/AAAAAAEAAAAAAOv/AAAAAAEAAAAAAOr/AAAAAAEAAAAAAOn/AAAAAAEAAAAAAOj/AAAAAAEAAAAAAOf/AAAAAAAAAAASAPv/AAACAAMAAAATAPv/AAACAAMAAAAUAPv/AAADAAIAAAAUAPr/AAAAAAEAAAAUAPn/AAABAAAAAAAVAPn/AAACAAMAAAAWAPn/AAADAAIAAAAWAPj/AAAAAAEAAAAWAPf/AAABAAAAAAAXAPf/AAACAAMAAAAYAPf/AAADAAIAAAAYAPb/AAAAAAEAAAAYAPX/AAABAAAAAAAZAPX/AAACAAMAAAAaAPX/AAADAAIAAAAaAPT/AAAAAAEAAAAaAPP/AAABAAAAAAAbAPP/AAACAAMAAAAcAPP/AAADAAIAAAAcAPL/AAAAAAEAAAAcAPH/AAABAAAAAAAdAPH/AAACAAMAAAAeAPH/AAADAAIAAAAeAPD/AAAAAAEAAAAeAO//AAABAAAAAAAfAO//AAACAAMAAAAgAO//AAADAAIAAAAgAO7/AAAAAAEAAAAgAO3/AAABAAAAAAAhAO3/AAACAAMAAAAiAO3/AAADAAIAAAAiAOz/AAAAAAEAAAAiAOv/AAABAAAAAAAjAOv/AAACAAMAAAAkAOv/AAADAAMAAAA=")
tile_set = ExtResource("2_kux3c")

[node name="Layer2" type="TileMapLayer" parent="Tiles" groups=["Tiles"]]
tile_set = ExtResource("3_mka6j")

[node name="LayerHazard" type="TileMapLayer" parent="Tiles"]
tile_map_data = PackedByteArray("AAAKAP3/AAAAAAAAAAALAP3/AAAAAAAAAAA=")
tile_set = ExtResource("5_6rfn8")

[node name="Player" parent="." instance=ExtResource("4_obqjr")]
position = Vector2(64, -32)

[node name="Terminal" parent="." instance=ExtResource("5_on78q")]
position = Vector2(240, -80)
puzzle = ExtResource("2_byl51")
dialog_before = Array[String](["Drag the wires to the fuckgin thingdsfsdf"])

[node name="Door" parent="." instance=ExtResource("6_me2q3")]
position = Vector2(283, -96)

[node name="LevelTrigger" parent="." instance=ExtResource("11_fv470")]
scene_to_load = ExtResource("12_468xu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelTrigger"]
position = Vector2(404, -188)
shape = SubResource("RectangleShape2D_ullp8")

[node name="HelpPoint" parent="." instance=ExtResource("10_2c3s3")]
position = Vector2(119, -32)
dialog = Array[String](["Use WASD to move and Space to jump.", "I like explanatory text boxes"])

[connection signal="puzzle_complete" from="Terminal" to="." method="puzzle_completed"]
